fixed the sizing of the main name to be more responsive and fixed the horizontal scrolling issue with the image and text cards

--- a/src/app/components/styles/link-page.module.css
+++ b/src/app/components/styles/link-page.module.css
@@ -1,6 +1,7 @@
 .background {
     background-color: #000;
-    height: 95vh;
+    height: 100vh;
+    width: 100vw;
     
     display: flex;
     justify-content: center;
@@ -8,7 +9,7 @@
 }
 
 .container {
-    width: 100%;
+    width: 100vw;
     
     display: flex;
     flex-direction: row;
