--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,8 @@
 body {
     margin: 0;
+    background-color: #000;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 html {
